//java 16

sourceCompatibility = 16
targetCompatibility = 16

jacoco {
  toolVersion = "0.8.6"
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.compilerArgs << "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED"
  options.compilerArgs << "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED"
}

sourceSets {
  test {
    java {
      srcDirs += ["src/test/java9+"]
    }
  }
}

tasks.withType(Test) {
  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/java.nio=ALL-UNNAMED"
  jvmArgs += "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
}

tasks.withType(JavaExec) {
//  jvmArgs += "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"
//  jvmArgs += "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
}